made buttons bigger + clearer labels

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">EcoScanner</string>
+    <string name="app_name">EkoSkaner</string>
+    <string name="scan">Skanuj</string>
 </resources>
