added "Help" button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">EkoSkaner</string>
     <string name="scan">Skanuj</string>
+    <string name="app_bar_action">Pomoc</string>
 </resources>
